# juniper_trans

./: .env  .env.example  Cargo.toml  Cross.toml  database.sqlite  merge.sql  tn.db  tn.db-journal  tn2.db  upgrade.sql
docker/: Dockerfile
dockerServer/: Dockerfile  build.sh  remove.sh  start.sh
migrations/2020-02-18-050321_create_entities/: down.sql  up.sql
shell/: a_pad.json  a_pad.py  a_pad.sh  a_pad.txt  a_staff.py  a_staff.sh  a_staff.txt  en.js  es.js  ko.js  web.json  web.py  web.sh  web.txt
src/: entity.rs  main.rs
src/app/: session.rs  token.rs
src/database/: entity.rs  mod.rs  schema.rs
src/graphql/: exception.rs  mod.rs  modes.rs  schema.rs  translate.rs
src/server/: mod.rs  session.rs  token.rs
