[package]
name = "juniper_hello"
version = "1.0.0"
authors = ["MrTan <freemrtan@gmailcom>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
actix-cors = "0.2.0"
env_logger = "0.7.1"
serde = "1.0.104"
serde_json = "1.0.48"
serde_derive = "1.0.104"
juniper = { git = "https://github.com/graphql-rust/juniper", rev = "eff086a", features = ["async"] }
diesel = { version = "1.4.3", features = ["sqlite", "chrono", "r2d2"] }
dotenv = "0.15.0"
chrono = "0.4"
r2d2 = "0.8.8"
jsonwebtoken = "7"
failure = "0.1.6"
failure_derive = "0.1.6"
futures = "0.3.4"
reqwest = { version = "0.10.2", features = ["blocking", "json"] }
async-trait = "0.1.24"
bcrypt="0.6.1"
# lazy_static = "1.4.0"